# CArray

./: CMakeLists.txt  main.c  readme.md
include/: array.h
src/: array.c
